// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with an image as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <div>
          <div>
            SOME LABEL
          </div>
        </div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
        <h2
          aria-level="2"
          role="heading"
        >
          Some Standfirst
        </h2>
        <div>
          <div>
            <NewArticleFlag />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <ArticleBylineWithLinks
              ast={
                Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Some byline",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ]
              }
              color="#333333"
            />
          </span>
        </div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
      <div>
        <nav>
          <ArticleTopics
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </nav>
      </div>
    </div>
    <div>
      <div>
        <figure>
          <div>
            <div>
              <Image
                highResSize={null}
                lowResSize={100}
                uri="https://crop169.io"
              />
            </div>
          </div>
          <div>
            <figcaption>
              <Caption
                credits="Some Credits"
                text="Some Caption"
              />
            </figcaption>
          </div>
        </figure>
      </div>
    </div>
    <div>
      <div
        id="0"
      >
        <div>
          <ArticleImage
            captionOptions={
              Object {
                "caption": "An image caption",
                "credits": "The image credits",
              }
            }
            imageOptions={
              Object {
                "display": "primary",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "1500:1000",
                "uri": "https://image.io",
              }
            }
          />
        </div>
      </div>
      <Link
        target="_blank"
        url="https://link.io"
      >
        Some Link
      </Link>
      <p>
        Some content
      </p>
      <div>
        <div>
          <PullQuote
            caption="AName"
            content="A pull quote"
            twitter="@AName"
          />
        </div>
      </div>
      <div>
        <figure>
          <div>
            <div>
              <div>
                <div>
                  <video
                    controls={true}
                    data-account="57838016001"
                    data-application-id={true}
                    data-embed="default"
                    data-player="default"
                    data-video-id="4084164751001"
                    id="4084164751001-57838016001-1"
                    poster="https://image.io"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div>
              <Caption
                text="This is video caption"
              />
            </div>
          </figcaption>
        </figure>
      </div>
      <div>
        <nav>
          <ArticleTopics
            topics={
              Array [
                Object {
                  "name": "Topic",
                  "slug": "topic",
                },
              ]
            }
          />
        </nav>
      </div>
      <aside
        id="related-articles"
      >
        <RelatedArticles
          isVisible={false}
          slice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "byline": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
        />
      </aside>
    </div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </div>
</article>
`;

exports[`2. an article with a video as the lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <div>
          <VideoLabel
            color="#333333"
            title={null}
          />
        </div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div>
      <div>
        <figure>
          <div>
            <div>
              <div>
                <div>
                  <video
                    controls={true}
                    data-account="5436121857001"
                    data-application-id={true}
                    data-embed="default"
                    data-player="default"
                    data-video-id="5831024132001"
                    id="5831024132001-5436121857001-2"
                    poster="https://video169.io"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <figcaption>
              <Caption
                text="This is video caption"
              />
            </figcaption>
          </div>
        </figure>
      </div>
    </div>
    <div>
      <p>
        Some content
      </p>
      <aside
        id="related-articles"
      />
    </div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </div>
</article>
`;

exports[`3. an article with no lead asset 1`] = `
<article>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <div>
        <h1
          aria-level="1"
          role="heading"
        >
          Some Headline
        </h1>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <p>
        Some content
      </p>
      <aside
        id="related-articles"
      />
    </div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </div>
</article>
`;
